# agentic_rag_langgraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
src/agentic_rag/: app.py  config.py  document_chunker.py  exceptions.py  interfaces.py  pdf_to_md.ipynb  utils.py
src/agentic_rag/core/: chat_interface.py  document_manager.py  rag_system.py
src/agentic_rag/db/: parent_store_manager.py  vector_db_manager.py
src/agentic_rag/markdown_docs/: chapter1.md
src/agentic_rag/rag_agent/: edges.py  graph.py  graph_state.py  nodes.py  prompts.py  schemas.py  tools.py
src/agentic_rag/ui/: css.py  gradio_app.py
tests/: conftest.py  test_chunker.py  test_config.py  test_crag.py  test_exceptions.py  test_fast_path.py
